--- a/Hobbies.html
+++ b/Hobbies.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Hobbies</h1>
   <!-- Site Directory -->
-  <a href="Index.html">Index</a>
+  <a href="index.html">Index</a>
   <a href="contact.html">My Contact Info</a>
   <a href="poetry.html">Poetry</a>
   <hr>
