--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
   <h1>My Contact Details</h1>
   <!-- Site Directory -->
-  <a href="Index.html">Index</a>
+  <a href="index.html">Index</a>
   <a href="Hobbies.html">Hobbies</a>
   <a href="poetry.html">Poetry</a>
   <table cellspacing="1" bgcolor="#C0C0C0">
