--- a/poetry.html
+++ b/poetry.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Poetry</h1>
   <!-- Contact Block -->
-  <a href="Index.html">Index</a>
+  <a href="index.html">Index</a>
   <a href="Hobbies.html">Hobbies</a>
   <a href="contact.html">My Contact Info</a>
   <hr>
