Updates to multiple files.

--- a/Hobbies.html
+++ b/Hobbies.html
@@ -10,7 +10,7 @@
   <h1>Hobbies</h1>
   <!-- Site Directory -->
   <a href="index.html">Index</a>
-  <a href="contact.html">My Contact Info</a>
+  <a href="contact.html">Contact Me</a>
   <a href="poetry.html">Poetry</a>
   <hr>
   <h5>
@@ -20,7 +20,7 @@
       <ul>
         <li><a href="poetry.html">Here's a sample of my writing!</a></li>
       </ul>
-      <li>Singing</li>
+      <li>Singing.</li>
       <li>Cooking delicious food, and brewing up delicious coffee!</li>
       <li>Tabletop games; Dungeons and Dragons, Pathfinder, Shadowrun. </li>
       <li>Custom building gaming PCs for friends and family.</li>
