--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <a href="contact.html">Contact Me</a>
         <a href="poetry.html">Poetry</a>
         <p>Hey there! I'm an Integration Technician specialized in systematic support functions.
-          I make use of Oracle and SecureCRT on a daily basis to manage systematic material within the warehouse
-          lab for multiple programs. Additionally, I am an aspiring web/application developer!
+          I make use of Oracle, SecureCRT and Salesforce on a daily basis to manage systematic material within the warehouse
+          lab for multiple programs. Additionally, I am an aspiring web/application developer! I built this website in my spare time, in an effort to teach myself HTML, CSS, and Javascript.
           I make my own cold brew coffee, and I build computers in my free time.</p>
       </td>
     </tr>
@@ -56,26 +56,58 @@
   <hr>
   <!--Begin Skills Section, uses tables to display skill and skill proficiency-->
   <h3>Skills</h3>
-  <h5>
-    Programming Languages
 
     <table cellspacing="10">
-      <tr>
-        <td>Python</td>
-        <td>⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>Java</td>
-        <td>⭐⭐⭐</td>
-      </tr>
+      <thead>
+        <th>Programming Languages</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Python</td>
+          <td>⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>Java</td>
+          <td>⭐⭐⭐</td>
+        </tr>
 
-      <tr>
-        <td>HTML</td>
-        <td>⭐⭐⭐⭐</td>
-      </tr>
+        <tr>
+          <td>HTML</td>
+          <td>⭐⭐⭐⭐</td>
+        </tr>
     </table>
-  </h5>
-  
+
+    <table cellspacing="10">
+      <thead>
+        <th>Hardware</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Hardware Troubleshooting</td>
+          <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+
+        <tr>
+          <td>Networking</td>
+          <td>⭐⭐⭐⭐</td>
+        </tr>
+
+        <tr>
+          <td>Cabling</td>
+          <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+
+        <tr>
+          <td>A/V Setup</td>
+          <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>Servers</td>
+          <td>⭐⭐⭐⭐</td>
+        </tr>
+      </tbody>
+    </table>
+
   <h5>
     Relevant Software Proficiencies
     <ul>
@@ -91,7 +123,11 @@
       <ul>
         <li>Preferred text editor for HTML.</li>
       </ul>
-      <li>Microsoft 365, Excel & Word</li>
+      <li>Microsoft 365, Excel, Word and Powerpoint</li>
+      <li>Salesforce Lightning</li>
+      <ul>
+        <li>Creation of CCCs to promote clear communication among teammates.</li>
+      </ul>
   </h5>
   <hr>
 
@@ -124,7 +160,7 @@
       <td>2016</td>
       <td>Lewis and Clark Community College</td>
       <td>Computer Network and Systems internship</td>
-      <td>Design, maintain and implement network solutions for the Trimpe Advanced Technology Center. Terminate and run RJ45 cables to provide network connectivity to student workstations.</td>
+      <td>Design, maintain and implement network solutions for the Trimpe Advanced Technology Center. Terminate and run RJ45 cables to provide network connectivity to student workstations. Active collaboration on a team of three to achieve network solutions.</td>
     </tr>
     <tr>
       <td>2017-2019</td>
@@ -139,7 +175,7 @@
       <td>2019-Present</td>
       <td>World Wide Technology</td>
       <td>Integration Technician</td>
-      <td></td>
+      <td>Manages systematic warehouse material through the use of <strong>Oracle Inventory</strong>, <strong>SecureCRT</strong>, and <strong>Salesforce</strong>. Assists with various functions and programs in the warehouse lab. Previously responsible for performing physical maintenance on Cisco, HP, and Dell servers in accordance to WWT ESD Standards.</td>
     </tr>
   </table>
 
