--- a/poetry.html
+++ b/poetry.html
@@ -11,7 +11,7 @@
   <!-- Contact Block -->
   <a href="index.html">Index</a>
   <a href="Hobbies.html">Hobbies</a>
-  <a href="contact.html">My Contact Info</a>
+  <a href="contact.html">Contact Me</a>
   <hr>
   <h3>Fire</h3>
   <p>With fire we consume and exhume, christened with heat that we lost in the womb. With fire we dance, we prance and we sing. Fire is a wonderful thing.</p>
