Changes style of pages, introductory CSS.

--- a/Hobbies.html
+++ b/Hobbies.html
@@ -4,6 +4,21 @@
 <head>
   <meta charset="utf-8">
   <title>Devin's Hobbies</title>
+
+  <style>
+
+  body {
+    background-color: #fce38a;
+  }
+
+  hr {
+    background-color: black;
+    border-style: none;
+    height: 2px;
+  }
+
+  </style>
+  
 </head>
 
 <body>
