--- a/index.html
+++ b/index.html
@@ -4,12 +4,27 @@
 <head>
   <meta charset="utf-8">
   <title>Devin's Personal Site</title>
+
+<style>
+
+body {
+  background-color: #fce38a;
+}
+
+hr {
+  background-color: black;
+  border-style: none;
+  height: 2px;
+}
+
+</style>
+
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/Picture1.jpg" alt="Devin Profile Picture" style="width:200px;height:200px;">
+      <td><img src="images/Picture1.png" alt="Devin Profile Picture" style="width:200px;height:200px;">
         <!--  <img src="images/devin.jpg" alt="Backup image"> -->
       </td>
       <td>
@@ -27,7 +42,7 @@
     </tr>
   </table>
   <hr>
-  <h3>Relevant Education</h3>
+  <center><h3>Relevant Education</h3></center>
   <h5>
     Edwardsville High School
     <ul>
@@ -55,7 +70,7 @@
   </h5>
   <hr>
   <!--Begin Skills Section, uses tables to display skill and skill proficiency-->
-  <h3>Skills</h3>
+  <center><h3>Skills</h3></center>
 
     <table cellspacing="10">
       <thead>
@@ -107,9 +122,9 @@
         </tr>
       </tbody>
     </table>
-
+  <hr>
   <h5>
-    Relevant Software Proficiencies
+    <center>Relevant Software Proficiencies</center>
     <ul>
       <li><a href="https://www.oracle.com/applications/ebusiness/">Oracle</a></li>
       <ul>
@@ -131,7 +146,7 @@
   </h5>
   <hr>
 
-  <h3>Work Experience</h3>
+  <center><h3>Work Experience</h3></center>
   <table>
     <thead>
       <tr>
