--- a/poetry.html
+++ b/poetry.html
@@ -4,6 +4,21 @@
 <head>
   <meta charset="utf-8">
   <title>Devin's Poetry</title>
+
+  <style>
+
+  body {
+    background-color: #fce38a;
+  }
+
+  hr {
+    background-color: black;
+    border-style: none;
+    height: 2px;
+  }
+
+  </style>
+
 </head>
 
 <body>
@@ -13,9 +28,13 @@
   <a href="Hobbies.html">Hobbies</a>
   <a href="contact.html">Contact Me</a>
   <hr>
-  <h3>Fire</h3>
+  <center>
+    <h3>Fire</h3>
+  </center>
   <p>With fire we consume and exhume, christened with heat that we lost in the womb. With fire we dance, we prance and we sing. Fire is a wonderful thing.</p>
-  <h3>Love</h3>
+  <center>
+    <h3>Love</h3>
+  </center>
   <p>Hearts in battle, in our chests they rattle, stuck in a cage, related to rage. With love we run, with love we hide. With love we hate, with love we relate. A frozen pond, or a concrete lake. We sing a song, of loving mates. Feel the tune, and
     don't leave soon. Unpack your bags, stay here with me. We might see what we can be.</p>
 </body>
