--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,21 @@
 <head>
   <meta charset="utf-8">
   <title>Contact Me</title>
+
+  <style>
+
+  body {
+    background-color: #fce38a;
+  }
+
+  hr {
+    background-color: black;
+    border-style: none;
+    height: 2px;
+  }
+
+  </style>
+
 </head>
 
 <body>
@@ -12,7 +27,8 @@
   <a href="index.html">Index</a>
   <a href="Hobbies.html">Hobbies</a>
   <a href="poetry.html">Poetry</a>
-  <table cellspacing="1" bgcolor="#C0C0C0">
+  <center>
+  <table cellspacing="1">
     <tr>
       <td>Email</td>
       <td>devin.murnan@gmail.com</td>
@@ -22,8 +38,9 @@
       <td>(618)954-8567</td>
     </tr>
   </table>
+  </center>
   <hr>
-  <h3>Contact me!</h3>
+  <center><h3>Contact me!</h3>
   <form enctype="text/plain" action="mailto:dmurnanwwt@gmail.com" method="post">
     <label>Your Name:</label>
     <input type="text" name="YourName" value=""><br>
@@ -32,6 +49,7 @@
     <label>Your Message:</label><br>
     <textarea name="YourMessage" id="" cols="30" rows="10"></textarea>
     <input type="submit" name="">
+  </center>
 
   </form>
 </body>
