--- a/contact.html
+++ b/contact.html
@@ -30,11 +30,11 @@
   <center>
   <table cellspacing="1">
     <tr>
-      <td>Email</td>
+      <td>Email:</td>
       <td>devin.murnan@gmail.com</td>
     </tr>
     <tr>
-      <td>Cell📱</td>
+      <td>Cell:</td>
       <td>(618)954-8567</td>
     </tr>
   </table>
