Updates to CSS and Text
Updated HTML and CSS to change text and formatting.

--- a/Hobbies.html
+++ b/Hobbies.html
@@ -4,21 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Devin's Hobbies</title>
+  <link rel="stylesheet" href="css/styles.css">
 
-  <style>
-
-  body {
-    background-color: #fce38a;
-  }
-
-  hr {
-    background-color: black;
-    border-style: none;
-    height: 2px;
-  }
-
-  </style>
-  
 </head>
 
 <body>
@@ -28,19 +15,18 @@
   <a href="contact.html">Contact Me</a>
   <a href="poetry.html">Poetry</a>
   <hr>
-  <h5>
     <ol>
       <li>Team-Based Competitive Online Gaming</li>
       <li>Writing Poetry and Lyrics.</li>
       <ul>
         <li><a href="poetry.html">Here's a sample of my writing!</a></li>
       </ul>
-      <li>Singing.</li>
-      <li>Cooking delicious food, and brewing up delicious coffee!</li>
+      <li>Cooking delicious food.</li>
+      <li>Hand making cold-brew coffee.</li>
       <li>Tabletop games; Dungeons and Dragons, Pathfinder, Shadowrun. </li>
       <li>Custom building gaming PCs for friends and family.</li>
     </ol>
-  </h5>
+  <hr>
 </body>
 
 </html>
