--- a/contact.html
+++ b/contact.html
@@ -4,43 +4,30 @@
 <head>
   <meta charset="utf-8">
   <title>Contact Me</title>
-
-  <style>
-
-  body {
-    background-color: #fce38a;
-  }
-
-  hr {
-    background-color: black;
-    border-style: none;
-    height: 2px;
-  }
-
-  </style>
+  <link rel="stylesheet" href="css/styles.css">
 
 </head>
 
+
 <body>
-  <h1>My Contact Details</h1>
+  <h1>Contact Me</h1>
   <!-- Site Directory -->
   <a href="index.html">Index</a>
   <a href="Hobbies.html">Hobbies</a>
   <a href="poetry.html">Poetry</a>
-  <center>
-  <table cellspacing="1">
-    <tr>
-      <td>Email:</td>
-      <td>devin.murnan@gmail.com</td>
-    </tr>
-    <tr>
-      <td>Cell:</td>
-      <td>(618)954-8567</td>
-    </tr>
-  </table>
-  </center>
   <hr>
-  <center><h3>Contact me!</h3>
+  <center>
+    <table cellspacing="1">
+      <tr>
+        <td>Email:</td>
+        <td>devin.murnan@gmail.com</td>
+      </tr>
+      <tr>
+        <td>Cell:</td>
+        <td>(618)954-8567</td>
+      </tr>
+    </table>
+    <br>
   <form enctype="text/plain" action="mailto:dmurnanwwt@gmail.com" method="post">
     <label>Your Name:</label>
     <input type="text" name="YourName" value=""><br>
