--- a/poetry.html
+++ b/poetry.html
@@ -4,20 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Devin's Poetry</title>
-
-  <style>
-
-  body {
-    background-color: #fce38a;
-  }
-
-  hr {
-    background-color: black;
-    border-style: none;
-    height: 2px;
-  }
-
-  </style>
+  <link rel="stylesheet" href="css/styles.css">
 
 </head>
 
@@ -37,6 +24,7 @@
   </center>
   <p>Hearts in battle, in our chests they rattle, stuck in a cage, related to rage. With love we run, with love we hide. With love we hate, with love we relate. A frozen pond, or a concrete lake. We sing a song, of loving mates. Feel the tune, and
     don't leave soon. Unpack your bags, stay here with me. We might see what we can be.</p>
+  <hr>
 </body>
 
 </html>
