--- a/index.html
+++ b/index.html
@@ -4,20 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Devin's Personal Site</title>
-
-<style>
-
-body {
-  background-color: #fce38a;
-}
-
-hr {
-  background-color: black;
-  border-style: none;
-  height: 2px;
-}
-
-</style>
+  <link rel="stylesheet" href="css/styles.css">
 
 </head>
 
@@ -28,7 +15,7 @@ hr {
         <!--  <img src="images/devin.jpg" alt="Backup image"> -->
       </td>
       <td>
-        <h1>Devin Murnan ☕</h1>
+        <h1>Devin Murnan☕</h1>
         <p><em>Integration Technician at <strong><a href="https://www.wwt.com/">World Wide Technology</a></strong></em></p>
         <!-- Site Directory -->
         <a href="Hobbies.html">Hobbies</a>
@@ -37,168 +24,161 @@ hr {
         <p>Hey there! I'm an Integration Technician specialized in systematic support functions.
           I make use of Oracle, SecureCRT and Salesforce on a daily basis to manage systematic material within the warehouse
           lab for multiple programs. Additionally, I am an aspiring web/application developer! I built this website in my spare time, in an effort to teach myself HTML, CSS, and Javascript.
-          I make my own cold brew coffee, and I build computers in my free time.</p>
+          I make my own cold brew coffee, and I build computers for friends and family.</p>
       </td>
     </tr>
   </table>
   <hr>
   <center><h3>Relevant Education</h3></center>
-  <h5>
-    Edwardsville High School
-    <ul>
-      <li>Programming in Java(Special Projects)</li>
-      <ul>
-        <li><a href="http://www.meinzeit.com/webTeach/projects/student/povRay/index.htm">Featured on class website for "Animated Blobs" in spring of 2015</a></li>
-      </ul>
-      <li>Networking</li>
-    </ul>
-  </h5>
 
-  <h5>
-    Lewis and Clark Community College
+  <h5> Edwardsville High School</h5>
+  <ul>
+    <li>Programming in Java(Special Projects)</li>
     <ul>
-      <li>PC Servicing</li>
-      <li>Computer Network and System Internship</li>
-      <li>Introduction To Computer Networking</li>
+      <li><a href="http://www.meinzeit.com/webTeach/projects/student/povRay/index.htm">Featured on class website for "Animated Blobs" in spring of 2015</a></li>
     </ul>
-  </h5>
-  <h5>
-    Professional Training
-    <ul>
-      <li><a href="https://wwt.udemy.com/course/the-complete-web-development-bootcamp/">The Complete 2020 Web Development Bootcamp</a></li>
-    </ul>
-  </h5>
+    <li>Networking</li>
+  </ul>
+
+  <h5>Lewis and Clark Community College</h5>
+  <ul>
+    <li>PC Servicing</li>
+    <li>Computer Network and System Internship</li>
+    <li>Introduction To Computer Networking</li>
+  </ul>
+
+  <h5>Professional Training</h5>
+  <ul>
+    <li><a href="https://wwt.udemy.com/course/the-complete-web-development-bootcamp/">The Complete 2020 Web Development Bootcamp</a></li>
+  </ul>
   <hr>
   <!--Begin Skills Section, uses tables to display skill and skill proficiency-->
   <center><h3>Skills</h3></center>
 
-    <table cellspacing="10">
-      <thead>
-        <th>Programming Languages</th>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Python</td>
-          <td>⭐⭐⭐</td>
-        </tr>
-        <tr>
-          <td>Java</td>
-          <td>⭐⭐⭐</td>
-        </tr>
-
-        <tr>
-          <td>HTML</td>
-          <td>⭐⭐⭐⭐</td>
-        </tr>
-    </table>
-
-    <table cellspacing="10">
-      <thead>
-        <th>Hardware</th>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Hardware Troubleshooting</td>
-          <td>⭐⭐⭐⭐⭐</td>
-        </tr>
-
-        <tr>
-          <td>Networking</td>
-          <td>⭐⭐⭐⭐</td>
-        </tr>
-
-        <tr>
-          <td>Cabling</td>
-          <td>⭐⭐⭐⭐⭐</td>
-        </tr>
-
-        <tr>
-          <td>A/V Setup</td>
-          <td>⭐⭐⭐⭐⭐</td>
-        </tr>
-        <tr>
-          <td>Servers</td>
-          <td>⭐⭐⭐⭐</td>
-        </tr>
-      </tbody>
-    </table>
-  <hr>
-  <h5>
-    <center>Relevant Software Proficiencies</center>
-    <ul>
-      <li><a href="https://www.oracle.com/applications/ebusiness/">Oracle</a></li>
-      <ul>
-        <li>Inventory Management Module, used for visibility of warehouse material.</li>
-      </ul>
-      <li><a href="https://www.vandyke.com/products/securecrt/">SecureCRT</a></li>
-      <ul>
-        <li>Terminal emulation used for inventory management.</li>
-      </ul>
-      <li><a href="https://atom.io/">Atom</a></li>
-      <ul>
-        <li>Preferred text editor for HTML.</li>
-      </ul>
-      <li>Microsoft 365, Excel, Word and Powerpoint</li>
-      <li>Salesforce Lightning</li>
-      <ul>
-        <li>Creation of CCCs to promote clear communication among teammates.</li>
-      </ul>
-  </h5>
-  <hr>
-
-  <center><h3>Work Experience</h3></center>
-  <table>
+  <table cellspacing="10">
     <thead>
-      <tr>
-        <th>Dates</th>
-        <th>Company</th>
-        <th>Job Title</th>
-        <th>Responsiblities</th>
-      </tr>
+      <th>Programming Languages</th>
     </thead>
     <tbody>
       <tr>
-
+        <td>Python</td>
+        <td>⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Java</td>
+        <td>⭐⭐⭐</td>
       </tr>
 
-    </tbody>
-    <tfoot>
-
-    </tfoot>
-    <tr>
-      <td>2016-2017</td>
-      <td>Target</td>
-      <td>Flow Team</td>
-      <td>Pick and stock product, provide excellent customer service to shoppers.</td>
-    </tr>
-    <tr>
-      <td>2016</td>
-      <td>Lewis and Clark Community College</td>
-      <td>Computer Network and Systems internship</td>
-      <td>Design, maintain and implement network solutions for the Trimpe Advanced Technology Center. Terminate and run RJ45 cables to provide network connectivity to student workstations. Active collaboration on a team of three to achieve network solutions.</td>
-    </tr>
-    <tr>
-      <td>2017-2019</td>
-      <td>Jimmy Johns</td>
-      <td>Catering Manager</td>
-      <td>Maintained customer relations by sampling to local functions and businesses. Responsible for training employees on guerilla marketing techniques. Responsible for mapping out local businesses by surveying the store's delivery zone.
-        Maintained excellent customer service and cleanliness in a fast paced environment.</td>
-    </tr>
-
-
-    <tr>
-      <td>2019-Present</td>
-      <td>World Wide Technology</td>
-      <td>Integration Technician</td>
-      <td>Manages systematic warehouse material through the use of <strong>Oracle Inventory</strong>, <strong>SecureCRT</strong>, and <strong>Salesforce</strong>. Assists with various functions and programs in the warehouse lab. Previously responsible for performing physical maintenance on Cisco, HP, and Dell servers in accordance to WWT ESD Standards.</td>
-    </tr>
+      <tr>
+        <td>HTML</td>
+        <td>⭐⭐⭐⭐</td>
+      </tr>
   </table>
 
+  <table cellspacing="10">
+    <thead>
+      <th>Hardware</th>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Hardware Troubleshooting</td>
+        <td>⭐⭐⭐⭐⭐</td>
+      </tr>
 
-  </ul>
-  </h5>
+      <tr>
+        <td>Networking</td>
+        <td>⭐⭐⭐⭐</td>
+      </tr>
+
+      <tr>
+        <td>Cabling</td>
+        <td>⭐⭐⭐⭐⭐</td>
+      </tr>
+
+      <tr>
+        <td>A/V Setup</td>
+        <td>⭐⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Servers</td>
+        <td>⭐⭐⭐⭐</td>
+      </tr>
+    </tbody>
+  </table>
+  <hr>
+
+  <center><h3>Relevant Software Proficiencies</h3></center>
+  <ul>
+    <li><a href="https://www.oracle.com/applications/ebusiness/">Oracle</a></li>
+    <ul>
+      <li>Inventory Management Module, used for visibility of warehouse material.</li>
+    </ul>
+    <li><a href="https://www.vandyke.com/products/securecrt/">SecureCRT</a></li>
+    <ul>
+      <li>Terminal emulation used for inventory management.</li>
+    </ul>
+    <li><a href="https://atom.io/">Atom</a></li>
+      <ul>
+        <li>Preferred text editor for HTML.</li>
+      </ul>
+    <li>Microsoft 365, Excel, Word and Powerpoint</li>
+    <li>Salesforce Lightning</li>
+      <ul>
+        <li>Creation of CCCs to promote clear communication among teammates.</li>
+      </ul>
+    </ul>
+
+    <hr>
+
+    <center><h3>Work Experience</h3></center>
+    <table>
+      <thead>
+        <tr>
+          <th>Dates</th>
+          <th>Company</th>
+          <th>Job Title</th>
+          <th>Responsiblities</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+
+        </tr>
+
+      </tbody>
+      <tfoot>
+
+      </tfoot>
+      <tr>
+        <td>2016-2017</td>
+        <td>Target</td>
+        <td>Flow Team</td>
+        <td>Pick and stock product, provide excellent customer service to shoppers.</td>
+      </tr>
+      <tr>
+        <td>2016</td>
+        <td>Lewis and Clark Community College</td>
+        <td>Computer Network and Systems internship</td>
+        <td>Design, maintain and implement network solutions for the Trimpe Advanced Technology Center. Terminate and run RJ45 cables to provide network connectivity to student workstations. Active collaboration on a team of three to achieve network
+          solutions.</td>
+      </tr>
+      <tr>
+        <td>2017-2019</td>
+        <td>Jimmy Johns</td>
+        <td>Catering Manager</td>
+        <td>Maintained customer relations by sampling to local functions and businesses. Responsible for training employees on guerilla marketing techniques. Responsible for mapping out local businesses by surveying the store's delivery zone.
+          Maintained excellent customer service and cleanliness in a fast paced environment.</td>
+      </tr>
 
 
+      <tr>
+        <td>2019-Present</td>
+        <td>World Wide Technology</td>
+        <td>Integration Technician</td>
+        <td>Manages systematic warehouse material through the use of <strong>Oracle Inventory</strong>, <strong>SecureCRT</strong>, and <strong>Salesforce</strong>. Assists with various functions and programs in the warehouse lab. Previously
+          responsible for performing physical maintenance on Cisco, HP, and Dell servers in accordance to WWT ESD Standards.</td>
+      </tr>
+    </table>
 </body>
 
 </html>
