Update to index page name emoji, insert favicon.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Devin's Personal Site</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="shortcut icon" href="favicond.ico">
 
 </head>
 
@@ -15,7 +16,7 @@
         <!--  <img src="images/devin.jpg" alt="Backup image"> -->
       </td>
       <td>
-        <h1>Devin Murnan☕</h1>
+        <h1>Devin Murnan🍋</h1>
         <p><em>Integration Technician at <strong><a href="https://www.wwt.com/">World Wide Technology</a></strong></em></p>
         <!-- Site Directory -->
         <a href="Hobbies.html">Hobbies</a>
