--- a/Hobbies.html
+++ b/Hobbies.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Devin's Hobbies</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="shortcut icon" href="favicond.ico">
 
 </head>
 
