--- a/index.html
+++ b/index.html
@@ -67,13 +67,25 @@
       </tr>
       <tr>
         <td>Java</td>
-        <td>⭐⭐⭐</td>
+        <td>⭐⭐</td>
       </tr>
 
       <tr>
         <td>HTML</td>
-        <td>⭐⭐⭐⭐</td>
+        <td>⭐⭐⭐</td>
       </tr>
+
+      <tr>
+        <td>CSS</td>
+        <td>⭐⭐</td>
+      </tr>
+
+      <tr>
+        <td>Javascript</td>
+        <td>⭐</td>
+      </tr>
+
+
   </table>
 
   <table cellspacing="10">
@@ -88,21 +100,21 @@
 
       <tr>
         <td>Networking</td>
-        <td>⭐⭐⭐⭐</td>
+        <td>⭐⭐⭐</td>
       </tr>
 
       <tr>
         <td>Cabling</td>
-        <td>⭐⭐⭐⭐⭐</td>
+        <td>⭐⭐⭐⭐</td>
       </tr>
 
       <tr>
         <td>A/V Setup</td>
-        <td>⭐⭐⭐⭐⭐</td>
+        <td>⭐⭐⭐⭐</td>
       </tr>
       <tr>
         <td>Servers</td>
-        <td>⭐⭐⭐⭐</td>
+        <td>⭐⭐⭐</td>
       </tr>
     </tbody>
   </table>
@@ -120,7 +132,7 @@
     </ul>
     <li><a href="https://atom.io/">Atom</a></li>
       <ul>
-        <li>Preferred text editor for HTML.</li>
+        <li>Preferred text editor for HTML, CSS, Javascript.</li>
       </ul>
     <li>Microsoft 365, Excel, Word and Powerpoint</li>
     <li>Salesforce Lightning</li>
@@ -176,7 +188,7 @@
         <td>2019-Present</td>
         <td>World Wide Technology</td>
         <td>Integration Technician</td>
-        <td>Manages systematic warehouse material through the use of <strong>Oracle Inventory</strong>, <strong>SecureCRT</strong>, and <strong>Salesforce</strong>. Assists with various functions and programs in the warehouse lab. Previously
+        <td>Manages systematic warehouse material through the use of <strong>Oracle Inventory</strong>, <strong>SecureCRT</strong>, and <strong>Salesforce</strong> for communication cross-organization. Assists with various functions and programs in the warehouse lab. Previously
           responsible for performing physical maintenance on Cisco, HP, and Dell servers in accordance to WWT ESD Standards.</td>
       </tr>
     </table>
