--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Devin's Personal Site</title>
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="shortcut icon" href="favicond.ico">
+  <link rel="shortcut icon" href="favicon.ico">
 
 </head>
 
