Add to programming languages
adds javascript section to programming languages

--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
         <td>CSS</td>
         <td>⭐⭐</td>
       </tr>
+      <tr>
+        <td>Javascript</td>
+        <td>⭐</td>
+      </tr>
 
 
   </table>
