updates to text and code readability

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     </tr>
   </table>
   <hr>
-  <center><h3>Relevant Education</h3></center>
+  <center>
+    <h3>Relevant Education</h3>
+  </center>
 
   <h5> Edwardsville High School</h5>
   <ul>
@@ -54,7 +56,9 @@
   </ul>
   <hr>
   <!--Begin Skills Section, uses tables to display skill and skill proficiency-->
-  <center><h3>Skills</h3></center>
+  <center>
+    <h3>Skills</h3>
+  </center>
 
   <table cellspacing="10">
     <thead>
@@ -119,78 +123,89 @@
   </table>
   <hr>
 
-  <center><h3>Relevant Software Proficiencies</h3></center>
+  <center>
+    <h3>Relevant Software Proficiencies</h3>
+  </center>
   <ul>
     <li><a href="https://www.oracle.com/applications/ebusiness/">Oracle</a></li>
-    <ul>
-      <li>Inventory Management Module, used for visibility of warehouse material.</li>
-    </ul>
+      <ul>
+        <li>Inventory Management Module, used for visibility of warehouse material.</li>
+      </ul>
     <li><a href="https://www.vandyke.com/products/securecrt/">SecureCRT</a></li>
-    <ul>
-      <li>Terminal emulation used for inventory management.</li>
-    </ul>
+      <ul>
+        <li>Terminal emulation used for inventory management.</li>
+      </ul>
     <li><a href="https://atom.io/">Atom</a></li>
       <ul>
-        <li>Preferred text editor for HTML, CSS, Javascript.</li>
+        <li>Preferred text editor for HTML and CSS.</li>
       </ul>
-    <li>Microsoft 365, Excel, Word and Powerpoint</li>
+    <li><a href="https://visualstudio.microsoft.com/">Microsoft Visual Studio</a></li>
+      <ul>
+        <li>Preferred IDE.</li>
+      </ul>
+    <li><a href="https://desktop.github.com/">Github Desktop</a></li>
+      <ul>
+        <li>Version control for projects.</li>
+      </ul>
     <li>Salesforce Lightning</li>
       <ul>
         <li>Creation of CCCs to promote clear communication among teammates.</li>
       </ul>
-    </ul>
+    <li>Microsoft 365, Excel, Word and Powerpoint</li>
+  </ul>
 
-    <hr>
+  <hr>
 
-    <center><h3>Work Experience</h3></center>
-    <table>
-      <thead>
-        <tr>
-          <th>Dates</th>
-          <th>Company</th>
-          <th>Job Title</th>
-          <th>Responsiblities</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-
-        </tr>
-
-      </tbody>
-      <tfoot>
-
-      </tfoot>
+  <center>
+    <h3>Work Experience</h3>
+  </center>
+  <table>
+    <thead>
       <tr>
-        <td>2016-2017</td>
-        <td>Target</td>
-        <td>Flow Team</td>
-        <td>Pick and stock product, provide excellent customer service to shoppers.</td>
+        <th>Dates</th>
+        <th>Company</th>
+        <th>Job Title</th>
+        <th>Responsiblities</th>
       </tr>
+    </thead>
+    <tbody>
       <tr>
-        <td>2016</td>
-        <td>Lewis and Clark Community College</td>
-        <td>Computer Network and Systems internship</td>
-        <td>Design, maintain and implement network solutions for the Trimpe Advanced Technology Center. Terminate and run RJ45 cables to provide network connectivity to student workstations. Active collaboration on a team of three to achieve network
-          solutions.</td>
-      </tr>
-      <tr>
-        <td>2017-2019</td>
-        <td>Jimmy Johns</td>
-        <td>Catering Manager</td>
-        <td>Maintained customer relations by sampling to local functions and businesses. Responsible for training employees on guerilla marketing techniques. Responsible for mapping out local businesses by surveying the store's delivery zone.
-          Maintained excellent customer service and cleanliness in a fast paced environment.</td>
+
       </tr>
 
+    </tbody>
+    <tfoot>
 
-      <tr>
-        <td>2019-Present</td>
-        <td>World Wide Technology</td>
-        <td>Integration Technician</td>
-        <td>Manages systematic warehouse material through the use of <strong>Oracle Inventory</strong>, <strong>SecureCRT</strong>, and <strong>Salesforce</strong> for communication cross-organization. Assists with various functions and programs in the warehouse lab. Previously
-          responsible for performing physical maintenance on Cisco, HP, and Dell servers in accordance to WWT ESD Standards.</td>
-      </tr>
-    </table>
+    </tfoot>
+    <tr>
+      <td>2016-2017</td>
+      <td>Target</td>
+      <td>Flow Team</td>
+      <td>Pick and stock product, provide excellent customer service to shoppers.</td>
+    </tr>
+    <tr>
+      <td>2016</td>
+      <td>Lewis and Clark Community College</td>
+      <td>Computer Network and Systems internship</td>
+      <td>Design, maintain and implement network solutions for the Trimpe Advanced Technology Center. Terminate and run RJ45 cables to provide network connectivity to student workstations. Active collaboration on a team of three to achieve network
+        solutions.</td>
+    </tr>
+    <tr>
+      <td>2017-2019</td>
+      <td>Jimmy Johns</td>
+      <td>Catering Manager</td>
+      <td>Maintained customer relations by sampling to local functions and businesses. Responsible for training employees on guerilla marketing techniques. Responsible for mapping out local businesses by surveying the store's delivery zone.
+        Maintained excellent customer service and cleanliness in a fast paced environment.</td>
+    </tr>
+    <tr>
+      <td>2019-Present</td>
+      <td>World Wide Technology</td>
+      <td>L4 Integration Technician</td>
+      <td>Manages systematic warehouse material through the use of <strong>Oracle Inventory</strong>, <strong>SecureCRT</strong>, and <strong>Salesforce</strong> for communication cross-organization. Assists with various functions and programs in the
+        warehouse lab. Previously
+        responsible for performing physical maintenance on Cisco, HP, and Dell servers in accordance to WWT ESD Standards.</td>
+    </tr>
+  </table>
 </body>
 
 </html>
