--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <h5>Professional Training</h5>
   <ul>
-    <li><a href="https://wwt.udemy.com/course/the-complete-web-development-bootcamp/">The Complete 2020 Web Development Bootcamp</a></li>
+    <li><a href="https://wwt.udemy.com/course/the-complete-web-development-bootcamp/">The Complete 2021 Web Development Bootcamp (Dr. Angela Yu)</a></li>
   </ul>
   <hr>
   <!--Begin Skills Section, uses tables to display skill and skill proficiency-->
