--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
 
   <h5>Professional Training</h5>
   <ul>
-    <li><a href="https://wwt.udemy.com/course/the-complete-web-development-bootcamp/">The Complete 2021 Web Development Bootcamp (Dr. Angela Yu)</a></li>
+    <li><a href="https://wwt.udemy.com/course/the-complete-web-development-bootcamp/">The Complete 2021 Web Development Bootcamp</a></li>
+    <ul>
+      <li>Authored by Dr. Angela Yu <a href="https://www.appbrewery.co/">The App Brewery</a></li>
+    </ul>
   </ul>
   <hr>
   <!--Begin Skills Section, uses tables to display skill and skill proficiency-->
