Cleaned up skills tables

--- a/index.html
+++ b/index.html
@@ -67,11 +67,13 @@
     <thead>
       <th>Programming Languages</th>
     </thead>
+    
     <tbody>
       <tr>
         <td>Python</td>
         <td>⭐⭐⭐</td>
       </tr>
+
       <tr>
         <td>Java</td>
         <td>⭐⭐</td>
@@ -86,15 +88,24 @@
         <td>CSS</td>
         <td>⭐⭐⭐</td>
       </tr>
+
       <tr>
         <td>Javascript</td>
+        <td>⭐⭐⭐</td>
+    </tbody>
+
+    <thead>
+      <th>Frameworks</th>
+    </thead>
+
+    <tbody>
+      <tr>
+        <td>Bootstrap 4.5.x</td>
         <td>⭐⭐</td>
       </tr>
 
-
-  </table>
-
-  <table cellspacing="10">
+    </tbody>
+    </tr>
     <thead>
       <th>Hardware</th>
     </thead>
@@ -131,29 +142,29 @@
   </center>
   <ul>
     <li><a href="https://www.oracle.com/applications/ebusiness/">Oracle</a></li>
-      <ul>
-        <li>Inventory Management Module, used for visibility of warehouse material.</li>
-      </ul>
+    <ul>
+      <li>Inventory Management Module, used for visibility of warehouse material.</li>
+    </ul>
     <li><a href="https://www.vandyke.com/products/securecrt/">SecureCRT</a></li>
-      <ul>
-        <li>Terminal emulation used for inventory management.</li>
-      </ul>
+    <ul>
+      <li>Terminal emulation used for inventory management.</li>
+    </ul>
     <li><a href="https://atom.io/">Atom</a></li>
-      <ul>
-        <li>Preferred text editor for HTML and CSS.</li>
-      </ul>
+    <ul>
+      <li>Preferred text editor for HTML and CSS.</li>
+    </ul>
     <li><a href="https://visualstudio.microsoft.com/">Microsoft Visual Studio</a></li>
-      <ul>
-        <li>Preferred IDE.</li>
-      </ul>
+    <ul>
+      <li>Preferred IDE.</li>
+    </ul>
     <li><a href="https://desktop.github.com/">Github Desktop</a></li>
-      <ul>
-        <li>Version control for projects.</li>
-      </ul>
+    <ul>
+      <li>Version control for projects.</li>
+    </ul>
     <li>Salesforce Lightning</li>
-      <ul>
-        <li>Creation of CCCs to promote clear communication among teammates.</li>
-      </ul>
+    <ul>
+      <li>Creation of CCCs to promote clear communication among teammates.</li>
+    </ul>
     <li>Microsoft 365, Excel, Word and Powerpoint</li>
   </ul>
 
