--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
       <tr>
         <td>HTML</td>
-        <td>⭐⭐⭐</td>
+        <td>⭐⭐⭐⭐</td>
       </tr>
 
       <tr>
@@ -101,7 +101,11 @@
     <tbody>
       <tr>
         <td>Bootstrap 4.5.x</td>
-        <td>⭐⭐</td>
+        <td>⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Font Awesome</td>
+        <td>⭐⭐⭐</td>
       </tr>
 
     </tbody>
