Removed skill stars

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ll<!DOCTYPE html>
 <html lang="en" dir="ltr">
 
 <head>
@@ -71,27 +71,22 @@
     <tbody>
       <tr>
         <td>Python</td>
-        <td>⭐⭐⭐</td>
       </tr>
 
       <tr>
         <td>Java</td>
-        <td>⭐⭐</td>
       </tr>
 
       <tr>
         <td>HTML</td>
-        <td>⭐⭐⭐⭐</td>
       </tr>
 
       <tr>
         <td>CSS</td>
-        <td>⭐⭐⭐</td>
       </tr>
 
       <tr>
         <td>Javascript</td>
-        <td>⭐⭐⭐</td>
     </tbody>
 
     <thead>
@@ -101,11 +96,9 @@
     <tbody>
       <tr>
         <td>Bootstrap 4.5.x</td>
-        <td>⭐⭐⭐</td>
       </tr>
       <tr>
         <td>Font Awesome</td>
-        <td>⭐⭐⭐</td>
       </tr>
 
     </tbody>
@@ -116,26 +109,21 @@
     <tbody>
       <tr>
         <td>Hardware Troubleshooting</td>
-        <td>⭐⭐⭐⭐</td>
       </tr>
 
       <tr>
         <td>Networking</td>
-        <td>⭐⭐⭐</td>
       </tr>
 
       <tr>
         <td>Cabling</td>
-        <td>⭐⭐⭐⭐</td>
       </tr>
 
       <tr>
         <td>A/V Setup</td>
-        <td>⭐⭐⭐⭐</td>
       </tr>
       <tr>
         <td>Servers</td>
-        <td>⭐⭐⭐</td>
       </tr>
     </tbody>
   </table>
