--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-ll<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
 
 <head>
@@ -209,7 +209,8 @@ ll<!DOCTYPE html>
       <td>L4 Integration Technician</td>
       <td>Manages systematic warehouse material through the use of <strong>Oracle Inventory</strong>, <strong>SecureCRT</strong>, and <strong>Salesforce</strong> for communication cross-organization. Assists with various functions and programs in the
         warehouse lab. Previously
-        responsible for performing physical maintenance on Cisco, HP, and Dell servers in accordance to WWT ESD Standards.</td>
+        responsible for performing physical maintenance on Cisco, HP, and Dell servers in accordance to WWT ESD Standards.
+      </td>
     </tr>
   </table>
 </body>
