--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/Picture1.png" alt="Devin Profile Picture" style="width:200px;height:200px;">
+                                                          <!-- Quick and dirty inline CSS, future projects utilize a stylesheet as is best practice -->
+      <td><img src="images/Picture1.jpg" alt="Devin Profile Picture" style="width:200px;height:200px;border-radius:50%;">
         <!--  <img src="images/devin.jpg" alt="Backup image"> -->
       </td>
       <td>
         <h1>Devin Murnan🍋</h1>
-        <p><em>Integration Technician at <strong><a href="https://www.wwt.com/">World Wide Technology</a></strong></em></p>
+        <p><em>Data Analyst at <strong><a href="https://www.wwt.com/">World Wide Technology</a></strong></em></p>
         <!-- Site Directory -->
         <a href="Hobbies.html">Hobbies</a>
         <a href="contact.html">Contact Me</a>
         <a href="poetry.html">Poetry</a>
-        <p>Hey there! I'm an Integration Technician specialized in systematic support functions.
+        <p>Hey there! I'm a Data Analyst employed at World Wide Technology.
           I make use of Oracle, SecureCRT and Salesforce on a daily basis to manage systematic material within the warehouse
           lab for multiple programs. Additionally, I am an aspiring web/application developer! I built this website in my spare time, in an effort to teach myself HTML, CSS, and Javascript.
           I make my own cold brew coffee, and I build computers for friends and family.</p>
