Change Data Analyst to Software Engineering Apprentice

--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
       </td>
       <td>
         <h1>Devin Murnan🍋</h1>
-        <p><em>Data Analyst at <strong><a href="https://www.wwt.com/">World Wide Technology</a></strong></em></p>
+        <p><em>Software Engineering Apprentice at <strong><a href="https://www.wwt.com/">World Wide Technology</a></strong></em></p>
         <!-- Site Directory -->
         <a href="Hobbies.html">Hobbies</a>
         <a href="contact.html">Contact Me</a>
         <a href="poetry.html">Poetry</a>
-        <p>Hey there! I'm a Data Analyst employed at World Wide Technology.
-          I make use of Oracle, SecureCRT and Salesforce on a daily basis to manage systematic material within the warehouse
-          lab for multiple programs. Additionally, I am an aspiring web/application developer! I built this website in my spare time, in an effort to teach myself HTML, CSS, and Javascript.
+        <p>Hey there! I'm a Software Engineering Apprentice employed at World Wide Technology.
+          I am an aspiring web/application developer, I built this website in my spare time, in an effort to teach myself HTML, CSS, and Javascript.
           I make my own cold brew coffee, and I build computers for friends and family.</p>
       </td>
     </tr>
