--- a/index.html
+++ b/index.html
@@ -204,13 +204,20 @@
         Maintained excellent customer service and cleanliness in a fast paced environment.</td>
     </tr>
     <tr>
-      <td>2019-Present</td>
+      <td>2019-2021</td>
       <td>World Wide Technology</td>
       <td>L4 Integration Technician</td>
-      <td>Manages systematic warehouse material through the use of <strong>Oracle Inventory</strong>, <strong>SecureCRT</strong>, and <strong>Salesforce</strong> for communication cross-organization. Assists with various functions and programs in the
+      <td>Managed systematic warehouse material through the use of <strong>Oracle Inventory</strong>, <strong>SecureCRT</strong>. Used <strong>Salesforce</strong> for communication cross-organization. Assisted with multiple programs including <strong>Twitch</strong> and <strong>Amazon</strong> in the
         warehouse lab. Previously
         responsible for performing physical maintenance on Cisco, HP, and Dell servers in accordance to WWT ESD Standards.
       </td>
+    </tr>
+    <tr>
+      <td>2021-Present</td>
+      <td>World Wide Technology</td>
+      <td>Internal Software Engineering Apprentice</td>
+      <td>Entry level learning position focused towards training on industry-level programming standards. 
+        Works on a team of developers to assist with building applications for customers that have contracted with WWT. Focus on AGILE programming methodology.</td>
     </tr>
   </table>
 </body>
