--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="contact.html">Contact Me</a>
         <a href="poetry.html">Poetry</a>
         <p>Hey there! I'm a Software Engineering Apprentice employed at World Wide Technology.
-          I am an aspiring web/application developer, I built this website in my spare time, in an effort to teach myself HTML, CSS, and Javascript.
+          I am an aspiring web/application developer, I built this website in my spare time, in an effort to teach myself about HTML and CSS.
           I make my own cold brew coffee, and I build computers for friends and family.</p>
       </td>
     </tr>
@@ -69,12 +69,9 @@
     </thead>
 
     <tbody>
-      <tr>
-        <td>Python</td>
-      </tr>
 
       <tr>
-        <td>Java</td>
+        <td>Javascript</td>
       </tr>
 
       <tr>
@@ -86,7 +83,20 @@
       </tr>
 
       <tr>
-        <td>Javascript</td>
+        <td>Angular</td>
+      </tr>
+
+      <tr>
+        <td>React</td>
+      </tr>
+
+      <tr>
+        <td>Python</td>
+      </tr>
+
+      <tr>
+        <td>Java</td>
+      </tr>
     </tbody>
 
     <thead>
@@ -217,7 +227,7 @@
       <td>World Wide Technology</td>
       <td>Internal Software Engineering Apprentice</td>
       <td>Entry level learning position focused towards training on industry-level programming standards. 
-        Works on a team of developers to assist with building applications for customers that have contracted with WWT. Focus on AGILE programming methodology.</td>
+        Works on a team of developers to assist with building applications for customers that have contracted with WWT. Focus on AGILE programming methodology and SOLID principles.</td>
     </tr>
   </table>
 </body>
