--- a/index.html
+++ b/index.html
@@ -83,14 +83,6 @@
       </tr>
 
       <tr>
-        <td>Angular</td>
-      </tr>
-
-      <tr>
-        <td>React</td>
-      </tr>
-
-      <tr>
         <td>Python</td>
       </tr>
 
@@ -100,18 +92,28 @@
     </tbody>
 
     <thead>
+      <th>Libraries</th>
+    </thead>
+
+    <tbody>
+      <tr>
+        <td>React</td>
+      </tr>
+      <tr>
+        <td>Bootstrap</td>
+      </tr>
+    </tbody>
+
+    <thead>
       <th>Frameworks</th>
     </thead>
 
     <tbody>
       <tr>
-        <td>Bootstrap 4.5.x</td>
+        <td>Angular</td>
       </tr>
-      <tr>
-        <td>Font Awesome</td>
-      </tr>
-
     </tbody>
+
     </tr>
     <thead>
       <th>Hardware</th>
@@ -153,7 +155,7 @@
     </ul>
     <li><a href="https://atom.io/">Atom</a></li>
     <ul>
-      <li>Preferred text editor for HTML and CSS.</li>
+      <li>My first IDE, used to create this site.</li>
     </ul>
     <li><a href="https://visualstudio.microsoft.com/">Microsoft Visual Studio</a></li>
     <ul>
